Fix gap between Roar Room video and caption on smaller screens.

--- a/style.css
+++ b/style.css
@@ -132,6 +132,12 @@ h2 {
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 375px) {
+    #roar-room {
+      margin-bottom: -25%;
+    }
+  }
+
 #past-engagements {
   display: flex;
   justify-content: center;
